objects/Acc_TestObj1__c.object
<CustomObject>
    <fields>
        <fullName>SAcc_Field1__c</fullName>
        <description>Add TestData</description>
        <label>SAcc-Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAcc_Field2__c</fullName>
        <description>Add Comment  for  Field2</description>
        <label>SAcc-Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAcc_Field3__c</fullName>
        <description>Add  Field3</description>
        <label>SAcc-Field3</label>
        <type>Phone</type>
    </fields>
    <label>SAcc-TestObj1</label>
    <nameField>
        <label>Acc-TestObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAcc1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>